testsuite/poke.pkl/trim-diag-1.pk
/* { dg-do compile } */

defvar a = [1,2]["foo"..10]; /* { dg-error "" } */
